--- a/src/main/webapp/budgetSheet.html
+++ b/src/main/webapp/budgetSheet.html
@@ -27,14 +27,13 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active text-left" href="budgetSheet.html" style="color: rgba(255,255,255,0.9);">Budget Sheet</a></li>
                 </ul>
-        </div>
-        <li class="dropdown" style="color: rgb(0,0,0);"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="color: rgba(255,255,255,0.57);margin: 26px;">Month</a>
-            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="month/Jan.html">January</a><a class="dropdown-item" role="presentation" href="month/Feb.html">February</a><a class="dropdown-item" role="presentation" href="month/Mar.html">March</a><a class="dropdown-item"
-                    role="presentation" href="month/Apr.html">April</a><a class="dropdown-item" role="presentation" href="month/May.html">May</a><a class="dropdown-item" role="presentation" href="month/Jun.html">June</a><a class="dropdown-item" role="presentation"
-                    href="month/Jul.html">July</a><a class="dropdown-item" role="presentation" href="month/Aug.html">August</a><a class="dropdown-item" role="presentation" href="month/Sep.html">September</a><a class="dropdown-item" role="presentation" href="month/Oct.html">October</a>
-                <a
-                    class="dropdown-item" role="presentation" href="month/Nov.html">November</a><a class="dropdown-item" role="presentation" href="month/Dec.html">December</a></div>
-        </li><a href="#"><i class="fa fa-cog" style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a><a href="/logout"><i class="fa fa-sign-out" style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a></div>
+                <li class="dropdown" style="color: rgb(0,0,0);"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="color: rgba(255,255,255,0.57);margin: 26px;">Month</a>
+                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="month/Jun.html">June</a><a class="dropdown-item" role="presentation" href="month/Jul.html">July</a><a class="dropdown-item" role="presentation" href="month/Aug.html">August</a><a class="dropdown-item"
+                            role="presentation" href="month/Sep.html">September</a><a class="dropdown-item" role="presentation" href="month/Oct.html">October</a><a class="dropdown-item" role="presentation" href="month/Nov.html">November</a><a class="dropdown-item"
+                            role="presentation" href="month/Dec.html">December</a><a class="dropdown-item" role="presentation" href="month/Jan.html">January</a><a class="dropdown-item" role="presentation" href="month/Feb.html">February</a><a class="dropdown-item"
+                            role="presentation" href="month/Mar.html">March</a><a class="dropdown-item" role="presentation" href="month/Apr.html">April</a><a class="dropdown-item" role="presentation" href="month/May.html">May</a></div>
+                </li>
+        </div><a href="#"><i class="fa fa-cog" style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a><a href="/logout"><i class="fa fa-sign-out" style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a></div>
     </nav>
     <hr style="background-color: #0019ff;margin: 0px;height: 2px;">
     <hr>
