--- a/src/main/webapp/budgetSheet.html
+++ b/src/main/webapp/budgetSheet.html
@@ -1,68 +1,35 @@
 <!DOCTYPE html>
 <html ng-app="limecashBudgets">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Budget</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
-    <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css">
-    <link rel="stylesheet" href="assets/css/Simple-Login-1.css">
-    <link rel="stylesheet" href="assets/css/Simple-Login.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/untitled-1.css">
-    <link rel="stylesheet" href="assets/css/untitled-2.css">
-    <link rel="stylesheet" href="assets/css/untitled-3.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="assets/angular/angularBudgetSheet.js"></script>
+<title>Budget</title>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+<link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+<link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
+<link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css">
+<link rel="stylesheet" href="assets/css/Simple-Login-1.css">
+<link rel="stylesheet" href="assets/css/Simple-Login.css">
+<link rel="stylesheet" href="assets/css/styles.css">
+<link rel="stylesheet" href="assets/css/untitled-1.css">
+<link rel="stylesheet" href="assets/css/untitled-2.css">
+<link rel="stylesheet" href="assets/css/untitled-3.css">
+<link rel="stylesheet" href="assets/css/untitled.css">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+<script src="assets/angular/angularBudgetSheet.js"></script>
 </head>
 
-<body style="background-color: rgb(33,33,33);color: rgb(255,255,255);">
-<nav class="navbar navbar-light navbar-expand-md" style="background-color: #000000;">
-    <div class="container-fluid"><a class="navbar-brand" href="index.html"
-                                    style="color: rgba(255,255,255,0.9);">Home</a>
-        <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
-                class="navbar-toggler-icon"></span></button>
-        <div
-                class="collapse navbar-collapse text-left" id="navcol-1">
-            <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item" role="presentation"><a class="nav-link active text-left" href="budgetSheet.html"
-                                                            style="color: rgba(255,255,255,0.9);">Budget Sheet</a></li>
-            </ul>
-            <li class="dropdown" style="color: rgb(0,0,0);"><a class="dropdown-toggle" data-toggle="dropdown"
-                                                               aria-expanded="false" href="#"
-                                                               style="color: rgba(255,255,255,0.57);margin: 26px;">Month</a>
-                <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation"
-                                                          href="month/Jun.html">June</a><a class="dropdown-item"
-                                                                                           role="presentation"
-                                                                                           href="month/Jul.html">July</a><a
-                        class="dropdown-item" role="presentation" href="month/Aug.html">August</a><a
-                        class="dropdown-item"
-                        role="presentation" href="month/Sep.html">September</a><a class="dropdown-item"
-                                                                                  role="presentation"
-                                                                                  href="month/Oct.html">October</a><a
-                        class="dropdown-item" role="presentation" href="month/Nov.html">November</a><a
-                        class="dropdown-item"
-                        role="presentation" href="month/Dec.html">December</a><a class="dropdown-item"
-                                                                                 role="presentation"
-                                                                                 href="month/Jan.html">January</a><a
-                        class="dropdown-item" role="presentation" href="month/Feb.html">February</a><a
-                        class="dropdown-item"
-                        role="presentation" href="month/Mar.html">March</a><a class="dropdown-item" role="presentation"
-                                                                              href="month/Apr.html">April</a><a
-                        class="dropdown-item" role="presentation" href="month/May.html">May</a></div>
-            </li>
-        </div>
-        <a href="#"><i class="fa fa-cog" style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a><a
-                href="/logout"><i class="fa fa-sign-out"
-                                  style="font-size: 32px;margin: 8px;color: rgb(255,255,255);"></i></a></div>
-</nav>
-<hr style="background-color: #0019ff;margin: 0px;height: 2px;">
-<hr>
+<body style="background-color: rgb(33,33,33);color: rgb(255,255,255); display: none">
+<script>
+    $(function(){
+        $("#header").load("shared/header.html",function() {
+            $("#footer").load("shared/footer.html",function() {
+                $('body').show();
+            });
+        });
+    });
+</script>
+<div id="header"></div>
 <div class="table-responsive table-borderless text-center" style="color: rgba(255,255,255,0);font-size: 16px;background-color: rgba(255,255,255,0);margin: 0px;padding: 0px;" ng-controller="budgetTable">
     <button class="btn btn-primary" ng-click="saveBudgets()" type="button" style="background-color: rgb(76,200,0);">
         Save Changes
@@ -109,6 +76,9 @@
 </div>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+
+<div id="footer"></div>
+
 </body>
 
 </html>
