--- a/src/main/webapp/budgetSheet.html
+++ b/src/main/webapp/budgetSheet.html
@@ -58,18 +58,18 @@
         </thead>
         <tr ng-repeat="budget in budgets">
             <td><span contenteditable="false">{{budget.budgetName}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,0,$event)">{{budget.months[0]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,1,$event)">{{budget.months[1]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,2,$event)">{{budget.months[2]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,3,$event)">{{budget.months[3]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,4,$event)">{{budget.months[4]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,5,$event)">{{budget.months[5]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,6,$event)">{{budget.months[6]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,7,$event)">{{budget.months[7]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,8,$event)">{{budget.months[8]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,9,$event)">{{budget.months[9]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,10,$event)">{{budget.months[10]}}</span></td>
-            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget.budgetName,11,$event)">{{budget.months[11]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,0,$event)">{{budget.months[0]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,1,$event)">{{budget.months[1]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,2,$event)">{{budget.months[2]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,3,$event)">{{budget.months[3]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,4,$event)">{{budget.months[4]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,5,$event)">{{budget.months[5]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,6,$event)">{{budget.months[6]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,7,$event)">{{budget.months[7]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,8,$event)">{{budget.months[8]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,9,$event)">{{budget.months[9]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,10,$event)">{{budget.months[10]}}</span></td>
+            <td><span contenteditable="true" ng-keyup="updateBudgetValue(budget2.budgetName,11,$event)">{{budget.months[11]}}</span></td>
         </tr>
     </table>
 
