--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -125,6 +125,9 @@
         <a href="/AddTrans.html">
         <button class="btn btn-primary" type="button" style="background-color: rgb(0,162,45);height: 80px;width: 150px;font-size: 19px;">Add Transaction</button>
         </a>
+        <a href="/AddTransfer.html">
+            <button class="btn btn-primary" type="button" style="background-color: rgb(0,162,45);height: 80px;width: 150px;font-size: 19px;">Add Transfer</button>
+        </a>
     </div><img src="assets/img/lineGraph.png" style="width: 99vw;padding: 50px;height: 50vh;">
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
